k8s-charts/_renderedTurkey/hc-dev0.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hc-dev0
  labels:
    UserId: dev_gimmechart
---
######################################################################################
###################################### ingress #######################################
######################################################################################  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turkey-https
  labels:
    UserId: dev_gimmechart
  namespace: hc-dev0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
spec:
  rules:
  - host: dev0-assets.myhubs.net
    http:
      paths:
      - path: /files/
        pathType: Prefix
        backend:
          service:
            name: ret
            port: 
              number: 4000
      - path: /http
        pathType: Prefix
        backend:
          service:
            name: ret
            port: 
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubs
            port: 
              number: 8080
  - host: dev0.myhubs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ret
            port: 
              number: 4000            
---
########################################################################
###################### reticulum #######################################
########################################################################  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reticulum
  labels:
    UserId: dev_gimmechart
  namespace: hc-dev0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reticulum
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: reticulum
    spec:
      containers:
        - name: reticulum
          image: mozillareality/ret:24
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: "http://reticulum.dev0"
              port: 1111
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 120
          resources:
            limits:
              memory: 512Mi
              cpu: 0.8
            requests:
              memory: 128Mi
              cpu: 0.2
---
apiVersion: v1
kind: Service
metadata:
  name: ret
  labels:
    UserId: dev_gimmechart
  namespace: hc-dev0
spec:
  clusterIP: None
  ports:
  - name: https-reticulum
    port: 4000
    targetPort: 4000
  selector:
    app: reticulum
---
########################################################################
######################   hubs   ########################################
########################################################################  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubs
  labels:
    UserId: dev_gimmechart
  namespace: hc-dev0
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: hubs
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: hubs
    spec:
      containers:
        - name: hubs
          image: mozillareality/hubs:22
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: "http://hubs.dev0"
              port: 1111
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 120
          resources:
            limits:
              memory: 512Mi
              cpu: 0.8
            requests:
              memory: 64Mi
              cpu: 0.1
---
apiVersion: v1
kind: Service
metadata:
  name: hubs
  labels:
    UserId: dev_gimmechart
  namespace: hc-dev0
spec:
  clusterIP: None
  ports:
  - name: https-hubs
    port: 8080
    targetPort: 8080
  selector:
    app: hubs
